--- a/testhtml/welcome14/style.css
+++ b/testhtml/welcome14/style.css
@@ -1,4 +1,15 @@
 html, body {padding:0;margin:0;font-size: 15px;}
+button {
+  display:inline-block;
+  padding: 20px 40px;
+  background-color: black;
+  color:white;
+  font-size: 0.8rem;
+
+}
+
+.prev {position:absolute; left:0px; top:0px;}
+.next {position:absolute; right:0px; top:0px;}
 
 .container1 {
   width:100%;
@@ -9,6 +20,7 @@ html, body {padding:0;margin:0;font-size: 15px;}
   width:80%;
   margin:auto;
   background-color: white;
+  position: relative;
 
 }
 
@@ -36,11 +48,12 @@ html, body {padding:0;margin:0;font-size: 15px;}
 }
 
 .span1 {
-  width: 70%;
+  width: 75%;
   /*font-size: 2.2em; /*2.2 times higher than parent have*/
   font-size: 2.2rem;/*2.2 times higher than body*/
   color:darkblue;
   vertical-align: top;
+  /*box-sizing: border-box;*/
 }
 
 .span2 {
@@ -48,10 +61,11 @@ html, body {padding:0;margin:0;font-size: 15px;}
   font-size: 1.5rem;
   color:lightgreen;
   vertical-align: top;
+
 }
 
 .span3 {
-  width: 30%;
+  width: 32%;
   font-size: 1.2rem;/
   color:darkgrey;
   vertical-align: top;
