--- a/testhtml/atlantida00/css/style.css
+++ b/testhtml/atlantida00/css/style.css
@@ -100,6 +100,58 @@ a.btn {
 
 
 /*   Header */
+.main-header .container {
+  position:relative;
+  padding: 5px 0;
+}
+
+.header-logo,
+.main-navigation,
+.main-navigation li,
+.main-navigation a,
+.social-block {
+  display: inline-block;
+}
+
+.header-logo {
+  padding-left:55px;
+  font-family: Montserrat, sans-serif;
+  font-size: 18px;
+  /*line-height: 50px;*/
+  text-transform: uppercase;
+  color: #757575;
+}
+
+.header-logo:before {
+  position: absolute;
+  content: "";
+  top:20%;
+  left:0;
+  width:41px;
+  height:39px;
+  /*background:red;*/
+  background: url("../img/logo-main.jpg") no-repeat;
+}
+
+.main-navigation {
+  margin-left: 110px;
+}
+
+.main-navigation a {
+  margin-right:15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: Montserrat, sans-serif;
+  font-size: 12px;
+  /*line-height: 50px;*/
+  color: #b7b7b7;
+}
+
+.social-block {
+  position: absolute;
+  right:0;
+  top:30%;
+}
 /*-----  End of Header  ------*/
 
 /* slider start */
