--- a/testhtml/atlantida00/css/style.css
+++ b/testhtml/atlantida00/css/style.css
@@ -11,14 +11,14 @@ html {
 
 
 body {
+  font-family: sans-serif;
   /*font-size: 14px;*/
   /*line-height: 24px;*/
-  /*font-family: "PT Sans Narrow", sans-serif;*/
   /*font-weight: bold;*/
   /*text-transform: uppercase;*/
-  width: 1600px;
-  margin: auto;
-  border: 1px solid black;
+  /*width: 1600px;*/
+  /*margin: auto;*/
+  /*border: 1px solid black;*/
 }
 
 @font-face {
@@ -39,28 +39,25 @@ body {
 
 h2 {
   position: relative;
+  display: block;
   margin: 0;
-  display:block;
   font-size: 20px;
   line-height: 225px;
   font-family: Amsdam,"PT Sans Narrow", sans-serif;
-  /*font-weight: bold;*/
-  text-transform: uppercase;
-  text-align:center;
-  letter-spacing: 2px;
   font-weight: normal;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
 }
 
 .text-under-h2 {
   display: block;
   margin: 0 70px;
-  /*margin-top: -100px;*/
   font-size: 14px;
   line-height: 25px;
   /*line-height: 20px;*/
   font-family: "Crimson Text", sans-serif;
   letter-spacing: 1px;
-
 }
 
 .color-grey-h2 {
@@ -75,12 +72,10 @@ h2 {
 .btn {
   display: inline-block;
   text-align:center;
-  /*margin-right:5px;*/
   /*padding-top: 10px;*/
   /*padding-bottom: 10px;*/
   width:135px;
   /*height:40px;*/
-  /*padding: 0 30px;*/
   box-sizing: border-box;
   font-family: Montserrat, sans-serif;
   font-size: 13px;
@@ -139,7 +134,7 @@ a.btn {
   opacity: 0.8;
 }
 
-.header-logo:before {
+.header-logo::before {
   position: absolute;
   content: "";
   top:20%;
@@ -182,7 +177,7 @@ a.btn {
   /*border-right: none;*/
 }
 
-.soc-fb:after {
+.soc-fb::after {
   position: absolute;
   content: "";
   top:4px;
@@ -192,7 +187,7 @@ a.btn {
   background: #aaaaaa;
 }
 
-.soc-tw:after {
+.soc-tw::after {
   position: absolute;
   content: "";
   top:4px;
@@ -201,22 +196,23 @@ a.btn {
   height:10px;
   background: #aaaaaa;
 }
-
 /*-----  End of Header  ------*/
 
-/* slider start */
-
+/* -------------------------------*/
+/* SLIDER start ------------------*/
+/* -------------------------------*/
 .slider {
   background: url("../img/slider-bg.jpg") no-repeat;
   min-height: 635px;
+  background-size: cover;
 }
 
 .slider .container {
+  position: relative;
+  padding-top:120px;
   text-align: center;
-  position:relative;
-  /*vertical-align: middle;*/
+  /*vertical-align: bottom;*/
 }
-
 
 .slider-prev {
   position: absolute;
@@ -231,10 +227,9 @@ a.btn {
 }
 
 .slider-data {
-  display: inline-block;
+   display: inline-block;
   /*position: relative;*/
-  margin-top:120px;
-
+  /*margin-top:120px;*/
 }
 
 .text-slider {
@@ -246,7 +241,7 @@ a.btn {
 }
 
 
-h1 {
+.slider h1 {
   display: block;
   position: relative;
   margin: 0;
@@ -260,7 +255,7 @@ h1 {
   color: #ffffff;
 }
 
-h1:before {
+.slider h1::before {
   position: absolute;
   content: "";
   top:40px;
@@ -377,9 +372,9 @@ h1:before {
 
 /*services start*/
 .services {
-  background: url("../img/services-bg.jpg") no-repeat;
-  /*background-size: auto;*/
   min-height: 742px;
+  background: url("../img/services-bg.jpg") no-repeat;
+  background-size: cover;
   /*opacity: 0.9;*/
 }
 
@@ -509,6 +504,7 @@ h1:before {
 .right-column  {
   display:inline-block;
   width:560px;
+  box-sizing: border-box;
   border: 1px solid red;
 }
 
@@ -526,11 +522,11 @@ h1:before {
 }
 
 .right-column .history-item {
+  display: block;
   box-sizing: padding-box;
-  margin-right: 42px;
   padding-top: 20px;
   padding-bottom: 20px;
-  padding-left: 50px;
+  padding-left: 55px;
   padding-right: 15px;
 }
 
