css order updated

--- a/testhtml/atlantida00/css/style.css
+++ b/testhtml/atlantida00/css/style.css
@@ -324,8 +324,8 @@ a.btn {
   position: relative;
   width: 270px;
   /*margin: 40px 0;*/
-  /*border-right: 3px solid #b0b0b0;*/
   /*border:1px solid red;*/
+  color: #3e3d3d;
 }
 
 
@@ -339,7 +339,7 @@ a.btn {
   font-size: 15px;
   line-height: 21px;
   text-transform: uppercase;
-  color: #3e3d3d;
+
 }
 
 .about-us-item-number {
@@ -348,7 +348,6 @@ a.btn {
   font-size: 45px;
   line-height: 44px;
   /*text-transform: uppercase;*/
-  color: #3e3d3d;
 }
 
 .about-us-item:before {
@@ -398,18 +397,19 @@ a.btn {
 }
 
 .services-item {
-  display: inline-block;
-  text-align: center;
-  vertical-align: top;
   position: relative;
+  display: inline-block;
+  vertical-align: top;
   /*height: 490px;*/
   width: 270px;
-  /*border: 1px solid red;*/
   /*padding: 15px;*/
   margin-left: 15px;
-  /*color: #bebebf;*/
-  color: #d8d8d8;
+  text-align: center;
+  color: #bebebf;
+  /*color: #d8d8d8;*/
   /*color: #ffffff;*/
+  /*color: #3e3d3d;*/
+  /*border: 1px solid red;*/
 }
 
 .services-item::before {
